--- a/lakeCoSTR.ipynb
+++ b/lakeCoSTR.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/steeleb/ids-ne-lakes/blob/master/colab_notebooks/lakeCoSTR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/steeleb/lakeCoSTR_colab/blob/dev/lakeCoSTR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "source": [
         "# **User Guide**\n",
-        "Please view the **user guide** for assistance in navigating the tool and for specific constraints and caveats.\n",
+        "Please review the [**user guide**](https://github.com/lakeCoSTR/lakeCoSTR_colab/blob/main/UserGuide_lakeCoSTR_colab.md) for assistance in navigating the tool and for specific constraints and caveats.\n",
         "\n",
         "# **Motivations of lakeCoSTR**\n",
         "We created lakeCoSTR to make the acquisition and analysis of Landsat's Collection 2 Surface Temperature product more accessible for those interested in obtaining historical estimates of lake temperature from remote sensing data. This tool is geared to researchers interested in gathering historical temperature estimates, especially for small lakes."
@@ -52,9 +52,7 @@
         "id": "psnrRlTjBj2M"
       },
       "source": [
-        "# **1. Initial Setup**\n",
-        "\n",
-        "This notebook uses the [Google Earth Engine](https://developers.google.com/earth-engine) [Python API](https://developers.google.com/earth-engine/guides/python_install) to extract the surface temperature product from Landsat Collection 2 images for any water body in the world. \n"
+        "# **1. Initial Setup**\n"
       ]
     },
     {
@@ -79,7 +77,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown __Run this block__ to authorize Colab to authenticate your Google account and give it access to upload files from your local computer. Once you paste the code, press Enter.\n",
+        "#@markdown __Run this block__ to authorize Colab to authenticate your Google account and give it access to upload files from your local computer.\n",
         "from google.colab import auth, files\n",
         "auth.authenticate_user()\n",
         "import gspread\n",
@@ -483,7 +481,7 @@
         "#@markdown Replace your lake name where the following prompts read 'LAKENAME'. These folders\n",
         "#@markdown will be automatically created within this script.\n",
         "\n",
-        "lake_name = 'marchiquita' #@param {type:\"string\"}\n",
+        "lake_name = '' #@param {type:\"string\"}\n",
         "output_dir = \"/content/drive/MyDrive/lakeCoSTR_output/\"+ lake_name\n",
         "\n",
         "#this parses the 'output_dir' string to get last listed subfolder\n",
@@ -556,7 +554,7 @@
         "#@markdown Landsat scenes from both Tier 1 and Tier 2 of Collection 2 are \n",
         "#@markdown included for possible use. For Tier 2, specify the maximum spatial \n",
         "#@markdown error (in meters) for pixels. Only orthorectified images (L1T) are \n",
-        "#@markdown considered.\n",
+        "#@markdown considered. The default value is 24 meters.\n",
         "rmse = 24  #@param {type: \"number\"}\n",
         "#@markdown __Run this block__ after inputting the above parameter\n",
         "print(f\"Tier 2 L1T scenes with a maximum root mean square error of {rmse} meters will be considered\")"
@@ -1485,8 +1483,9 @@
         "id": "Cz3nZJqn7R5G"
       },
       "source": [
-        "##You are all set. Now go analyze your lake surface temperature data!\n",
-        "\n"
+        "##You are all set. Go analyze your lake surface temperature data! \n",
+        "\n",
+        "We suggest you save a copy of this notebook in the same folder as your downloaded data, which will appear in your Google Drive in the 'lakeCoSTR_output' folder for good measure.\n"
       ]
     }
   ],
@@ -1495,9 +1494,9 @@
       "collapsed_sections": [
         "DBZzaGgqpr8W"
       ],
-      "include_colab_link": true,
       "name": "landsat_C2_ST_v9.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
