remove histogram csv

--- a/lakeCoSTR.ipynb
+++ b/lakeCoSTR.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/steeleb/lakeCoSTR_colab/blob/dev/lakeCoSTR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -17,11 +17,11 @@
       },
       "source": [
         "# **lakeCoSTR for Colab**<br>\n",
-        "a tool for *__lake__ __Co__llection 2 __S__urface __T__emperature __R__etrieval*<p>\n",
+        "a tool for *__lake__ __Co__ llection 2 __S__ urface __T__ emperature __R__ etrieval*<p>\n",
         "<p>\n",
         "\n",
-        "**Version 10**<br>\n",
-        "*Last updated: 2022-04-01<p>*\n",
+        "**Version 1.11**<br>\n",
+        "*Last updated: 2022-04-07<p>*\n",
         "\n",
         "Created by:<br>\n",
         "Christina Herrick<br>\n",
@@ -1031,15 +1031,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title 4.2 View and export collated pixel distributions\n",
+        "#@title 4.2 Collated pixel distributions\n",
         "#@markdown __Run this block__ to iterate through the image collection and convert \n",
         "#@markdown all bins and frequencies to a single Pandas `DataFrame`. \n",
-        "#@markdown This returns *bins* (in deg C) in the first column, the image date as \n",
-        "#@markdown all subsequent column headers, and the pixel counts within each bin.\n",
         "\n",
         "length_plots = len(imgCol)\n",
         "list_of_dfs = []\n",
         "list_of_uids = []\n",
+        "\n",
         "# fig = make_subplots(rows=length_plots, cols=1)\n",
         "for i in imgCol:\n",
         "  uid = (i['properties']['L1_LANDSAT_PRODUCT_ID'])\n",
@@ -1060,32 +1059,14 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "70VebGE_KA--"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown __Run this block__ to export the `DataFrame` as a csv to your Google Drive\n",
-        "\n",
-        "if not 'output_dir' in globals():\n",
-        "  output_dir = \"drive/My Drive/Colab Notebooks/\"\n",
-        "out_histo_compiled = os.path.join(output_dir, file_prefix + \"_histograms.csv\")\n",
-        "appended_dfs.to_csv(out_histo_compiled)\n",
-        "print(\"Export completed:\", out_histo_compiled)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
         "id": "2_AbqwwDcT9j"
       },
       "outputs": [],
       "source": [
         "#@title 4.3 View pixel distribution using `matplotlib`\n",
         "#@markdown __Run this block__ to generate histograms for each lake temperature \n",
-        "#@markdown Landsat scene. Each scene is saved as png in a folder 'histograms' in your specified output directory. \n",
-        "#@markdown This step can also take some time to run.\n",
+        "#@markdown Landsat scene. Each scene is saved as png in a folder 'histograms' in the lakeCoSTR_output directory. \n",
+        "#@markdown This step can take some time to run.\n",
         "\n",
         "#print(len(list_of_uids),\" histograms will be generated\")\n",
         "print(\"Start:\", strftime(\"%x %X\"))\n",
@@ -1127,7 +1108,7 @@
         "id": "l1sYNsf_ndyG"
       },
       "source": [
-        "# **5. Export to CSV**"
+        "# **5. Export Landsat temperature statistics to CSV**"
       ]
     },
     {
@@ -1217,7 +1198,7 @@
         "id": "1zhMxo32fmnT"
       },
       "source": [
-        "# **6. Pair Landsat with *insitu* data**\n",
+        "# **6. Pair Landsat with *in situ* data**\n",
         "This next section is optional, but allows you to compare any field data you may have to the Landsat data produced here. This section uses the CSV exported above.<p>\n",
         "In order for this to run successfully, your data must be in CSV format and have the following headers/columns:\n",
         "\n",
@@ -1494,9 +1475,9 @@
       "collapsed_sections": [
         "DBZzaGgqpr8W"
       ],
+      "include_colab_link": true,
       "name": "landsat_C2_ST_v9.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
