remove display of datatable

--- a/lakeCoSTR.ipynb
+++ b/lakeCoSTR.ipynb
@@ -1050,8 +1050,7 @@
         "  list_of_dfs.append(a)\n",
         "\n",
         "appended_dfs = pd.concat(list_of_dfs,ignore_index=False, axis=1)\n",
-        "transposed_dfs = appended_dfs.T\n",
-        "data_table.DataTable(appended_dfs, include_index=True, max_columns=50, max_rows=50, num_rows_per_page=50)"
+        "transposed_dfs = appended_dfs.T"
       ]
     },
     {
