--- a/lakeCoSTRv1.12.ipynb
+++ b/lakeCoSTRv1.12.ipynb
@@ -20,8 +20,8 @@
         "a tool for *__lake__ __Co__ llection 2 __S__ urface __T__ emperature __R__ etrieval*<p>\n",
         "<p>\n",
         "\n",
-        "**Version 1.11**<br>\n",
-        "*Last updated: 2022-04-07<p>*\n",
+        "**Version 1.12**<br>\n",
+        "*Last updated: 2022-09-06<p>*\n",
         "\n",
         "Created by:<br>\n",
         "Christina Herrick<br>\n",
@@ -282,15 +282,23 @@
         "  qa = img.select([\"QA_PIXEL\"])\n",
         "  cloud1 = qa.bitwiseAnd(2).eq(0)  # bit 1, dilated cloud\n",
         "  cloud3 = qa.bitwiseAnd(8).eq(0)  # bit 3, cloud\n",
+        "  cloudshadow = qa.bitwiseAnd(16).eq(0) # bit 4, cloud shadow\n",
         "  snow = qa.bitwiseAnd(32).eq(0)  # bit 5, snow\n",
         "  cloud_confid = qa.rightShift(8).bitwiseAnd(3).lt(2)  # bits 8-9\n",
+        "  cloudsh_confid = qa.rightShift(10).bitwiseAnd(3).lt(2)  # bits 10-11\n",
         "  snow_confid = qa.rightShift(12).bitwiseAnd(3).lt(2)  # bits 12-13\n",
         "  cirrus_confid = qa.rightShift(14).bitwiseAnd(3).lt(2)  # bits 14-15\n",
         "\n",
         "  temp = img.select([\"ST_B6\"],[\"surface_temp\"]).multiply(0.00341802).add(149).add(-273.15)\n",
         "  \n",
-        "  updated = (temp.updateMask(cloud1).updateMask(cloud3).updateMask(snow)\n",
-        "  .updateMask(cloud_confid).updateMask(snow_confid).updateMask(cirrus_confid))\n",
+        "  updated = (temp.updateMask(cloud1)\n",
+        "  .updateMask(cloud3)\n",
+        "  .updateMask(snow)\n",
+        "  .updateMask(cloudshadow)\n",
+        "  .updateMask(cloud_confid)\n",
+        "  .updateMask(snow_confid)\n",
+        "  .updateMask(cirrus_confid)\n",
+        "  .updateMask(cloudsh_confid))\n",
         "          \n",
         "  return ee.Image(updated).copyProperties(img).set(\"system:time_start\",systime).set(\"SOLAR_ZENITH_ANGLE\", sza)\n",
         "\n",
@@ -303,14 +311,24 @@
         "  cloud1 = qa.bitwiseAnd(2).eq(0)  # bit 1, dilated cloud\n",
         "  cloud2 = qa.bitwiseAnd(4).eq(0)  # bit 2, cirrus (high confidence)\n",
         "  cloud3 = qa.bitwiseAnd(8).eq(0)  # bit 3, cloud\n",
+        "  cloudshadow = qa.bitwiseAnd(16).eq(0) # bit 4, cloud shadow\n",
         "  snow = qa.bitwiseAnd(32).eq(0)  # bit 5, snow\n",
         "  cloud_confid = qa.rightShift(8).bitwiseAnd(3).lt(2)  # bits 8-9\n",
+        "  cloudsh_confid = qa.rightShift(10).bitwiseAnd(3).lt(2)  # bits 10-11\n",
         "  snow_confid = qa.rightShift(12).bitwiseAnd(3).lt(2)  # bits 12-13\n",
         "  cirrus_confid = qa.rightShift(14).bitwiseAnd(3).lt(2)  # bits 14-15\n",
         "  \n",
         "  temp = img.select([\"ST_B10\"],[\"surface_temp\"]).multiply(0.00341802).add(149).add(-273.15)\n",
-        "  updated = (temp.updateMask(cloud1).updateMask(cloud3).updateMask(snow).\n",
-        "             updateMask(cloud_confid).updateMask(snow_confid).updateMask(cirrus_confid))\n",
+        "\n",
+        "  updated = (temp.updateMask(cloud1)\n",
+        "    .updateMask(cloud2)\n",
+        "    .updateMask(cloud3)\n",
+        "    .updateMask(cloudshadow)\n",
+        "    .updateMask(snow)\n",
+        "    .updateMask(cloud_confid)\n",
+        "    .updateMask(cloudsh_confid)\n",
+        "    .updateMask(snow_confid)\n",
+        "    .updateMask(cirrus_confid))\n",
         "\n",
         "  return ee.Image(updated).copyProperties(img).set(\"system:time_start\",systime).set(\"SOLAR_ZENITH_ANGLE\", sza)\n",
         "\n",
