Fixed user-uploaded table error
Fixed user-uploaded table error; also minor code tidying

--- a/lakeCoSTRv1_12.ipynb
+++ b/lakeCoSTRv1_12.ipynb
@@ -20,8 +20,8 @@
         "a tool for *__lake__ __Co__ llection 2 __S__ urface __T__ emperature __R__ etrieval*<p>\n",
         "<p>\n",
         "\n",
-        "**Version 1.12**<br>\n",
-        "*Last updated: 2022-09-06<p>*\n",
+        "**Version 1.13**<br>\n",
+        "*Last updated: 2023-03-22<p>*\n",
         "\n",
         "Created by:<br>\n",
         "Christina Herrick<br>\n",
@@ -30,7 +30,7 @@
         "Bethel Steele<br>\n",
         "Cary Institute of Ecosystem Studies<br>\n",
         "steeleb@caryinstitute.org<p>\n",
-        "__This tool is still under development and has an associated manuscript that has been submitted for peer review. This tool is licensed under CC-BY-NC-SA, please cite accordingly.__"
+        "__This tool is still under development and has an associated manuscript - https://doi.org/10.1002/ecs2.4357. This tool is licensed under CC-BY-NC-SA, please cite accordingly.__"
       ]
     },
     {
@@ -262,7 +262,7 @@
         "#@markdown __Run this block__ to import pre-existing features, images, and collections from Earth Engine\n",
         "wrs2 = ee.FeatureCollection(\"users/christinaherrickunh/WRS2_descending_2018\")\n",
         "utmbounds = ee.FeatureCollection(\"users/christinaherrickunh/UTM_Zone_Boundaries\")\n",
-        "sw = ee.Image(\"JRC/GSW1_2/GlobalSurfaceWater\")\n",
+        "sw = ee.Image(\"JRC/GSW1_4/GlobalSurfaceWater\")\n",
         "openwater = sw.select(\"occurrence\")\n",
         "l4t1 = ee.ImageCollection(\"LANDSAT/LT04/C02/T1_L2\")\n",
         "l4t2 = ee.ImageCollection(\"LANDSAT/LT04/C02/T2_L2\")\n",
@@ -471,6 +471,7 @@
         "  basemaps['Google Maps'].add_to(shp_map)\n",
         "  shp_map.add_ee_layer(shp,{},'aoi')\n",
         "  display(shp_map)\n",
+        "  box = shp\n",
         "# else:\n",
         "#   print(\"Display does not apply here; Opt A bounding box is being used for AOI\")"
       ]
@@ -499,7 +500,7 @@
         "#@markdown Replace your lake name where the following prompts read 'LAKENAME'. These folders\n",
         "#@markdown will be automatically created within this script.\n",
         "\n",
-        "lake_name = 'sunapee_v1_12' #@param {type:\"string\"}\n",
+        "lake_name = 'LAKENAME' #@param {type:\"string\"}\n",
         "output_dir = \"/content/drive/MyDrive/lakeCoSTR_output/\"+ lake_name\n",
         "\n",
         "#this parses the 'output_dir' string to get last listed subfolder\n",
