--- a/lakeCoSTRv1_12.ipynb
+++ b/lakeCoSTRv1_12.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/steeleb/lakeCoSTR_colab/blob/main/lakeCoSTRv1_12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://github.com/lakeCoSTR/lakeCoSTR_colab/blob/main/lakeCoSTRv1_12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
